updates documentation of the java memory setting options.